Ensured image width in CMS modal is not too wide

--- a/src/styles/common/_always.scss
+++ b/src/styles/common/_always.scss
@@ -31,7 +31,6 @@ main {
   opacity: 0.8;
 }
 
-
 body {
   &.apos-workflow-draft-page {
     [data-apos-widget-wrapper="aem-articles-featured"],
@@ -59,6 +58,14 @@ body {
   outline: $aposGreen dashed 2px;
 }
 
+.apos-modal-body {
+  .image-widget-simplified {
+    img {
+      display: inline-block;
+      width: 100%;
+    }
+  }
+}
 
 // common
 .content {
